Kubernetes-Security/ZTNA Calico Project/src/allow-youcef-to-juice.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: juice-shop-ip-policy
  namespace: default
spec:
  selector: "app == 'youcefs-juice-shop'"

  order: 10
  types:
    - Ingress
  ingress:
    - action: Allow
      source:
        selector: "run == 'youcef'"
